Basic LLM app using Prompt Templates

--- a/fundamentals/llm-basic-app.ipynb
+++ b/fundamentals/llm-basic-app.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "b1403403",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "8d0e8d38",
    "metadata": {},
    "outputs": [],
@@ -111,17 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "cee8cfb5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='¡Hola!, soy Carmen. Bienvenido a mi viaje de aprendizaje en Langchain.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 18, 'prompt_tokens': 31, 'total_tokens': 49, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_f7d56a8a2c', 'id': 'chatcmpl-BPcGLVyVg3fUfXQmVuPaLNRTR6fHH', 'finish_reason': 'stop', 'logprobs': None}, id='run-c31aa3d3-17f8-4d51-a035-f2a225ec3b48-0', usage_metadata={'input_tokens': 31, 'output_tokens': 18, 'total_tokens': 49, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content='¡Hola! Soy Carmen. Bienvenido a mi viaje de aprendizaje de Langchain.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 18, 'prompt_tokens': 31, 'total_tokens': 49, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_f7d56a8a2c', 'id': 'chatcmpl-BPcHa6jKQu5qGyUPydUPY2zE5AXhD', 'finish_reason': 'stop', 'logprobs': None}, id='run-901718c2-43d5-4472-b44b-c7b58bbd925c-0', usage_metadata={'input_tokens': 31, 'output_tokens': 18, 'total_tokens': 49, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "be389b98",
    "metadata": {},
    "outputs": [
@@ -159,12 +159,12 @@
        "  'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}},\n",
        " 'model_name': 'gpt-4o-mini-2024-07-18',\n",
        " 'system_fingerprint': 'fp_f7d56a8a2c',\n",
-       " 'id': 'chatcmpl-BPcGLVyVg3fUfXQmVuPaLNRTR6fHH',\n",
+       " 'id': 'chatcmpl-BPcHa6jKQu5qGyUPydUPY2zE5AXhD',\n",
        " 'finish_reason': 'stop',\n",
        " 'logprobs': None}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "79bf682f",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|¡|Hola|!| Soy| Carmen|.| Bien|venido| a| mi| viaje| de| aprendizaje| de| Lang|chain|.||"
+      "|¡|Hola|!| Soy| Carmen|.| Bien|venido| a| mi| viaje| de| aprendizaje| sobre| Lang|chain|.||"
      ]
     }
    ],
@@ -194,9 +194,199 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88a9d0e2",
+   "id": "4436efcb",
    "metadata": {},
-   "source": []
+   "source": [
+    "## LLM Application using Prompt Templates\n",
+    "\n",
+    "Coming from a FullStack Engineering background, I love this idea of templates! It brings good memories! \n",
+    "\n",
+    "Instead of passing a list of messages directly into the LM, we pass a template that it's a combination of user raw input and application logic. \n",
+    "\n",
+    "For that we will use `ChatPromptTemplates``\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cb98616a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatPromptValue(messages=[SystemMessage(content='Translate the following from English into Spanish', additional_kwargs={}, response_metadata={}), HumanMessage(content='We are learning the basics of LangChain', additional_kwargs={}, response_metadata={})])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
+    "translation_systemp_template = \"Translate the following from {from_language} into {to_language}\"\n",
+    "\n",
+    "prompt_template = ChatPromptTemplate.from_messages(\n",
+    "    [(\"system\", translation_systemp_template), (\"user\", \"{text}\")]\n",
+    ")\n",
+    "\n",
+    "prompt = prompt_template.invoke({\"from_language\": \"English\", \"to_language\": \"Spanish\", \"text\": \"We are learning the basics of LangChain\"})\n",
+    "\n",
+    "#It returns a ChatPromptValue\n",
+    "prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6fc8f39f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SystemMessage(content='Translate the following from English into Spanish', additional_kwargs={}, response_metadata={}),\n",
+       " HumanMessage(content='We are learning the basics of LangChain', additional_kwargs={}, response_metadata={})]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can see now that we have a SystemMessage and HumanMessage like previously\n",
+    "prompt.to_messages()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "31d0dcd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estamos aprendiendo los conceptos básicos de LangChain.\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = model.invoke(prompt)\n",
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e181fd7",
+   "metadata": {},
+   "source": [
+    "#### Create a function \n",
+    "So now we can put all the steps together in a function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9f1cd341",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estamos aprendiendo los conceptos básicos de LangChain.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def translate(from_language: str=\"English\", to_language: str = \"Spanish\", text: str = \"\")-> str:\n",
+    "    translation_systemp_template = \"Translate the following from {from_language} into {to_language}\"\n",
+    "\n",
+    "    prompt_template = ChatPromptTemplate.from_messages(\n",
+    "        [(\"system\", translation_systemp_template), (\"user\", \"{text}\")]\n",
+    "    )\n",
+    "\n",
+    "    if not text:\n",
+    "        text = \"We are learning the basics of LangChain\"\n",
+    "\n",
+    "    # Generate the prompt\n",
+    "    prompt = prompt_template.invoke({\n",
+    "        \"from_language\": from_language, \n",
+    "        \"to_language\": to_language, \n",
+    "        \"text\": text\n",
+    "    })\n",
+    "\n",
+    "    # Call the model\n",
+    "    response = model.invoke(prompt)\n",
+    "    return response.content\n",
+    "\n",
+    "# Test the function\n",
+    "print(translate(\"English\", \"Spanish\", \"We are learning the basics of LangChain\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9bdffcf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Text:  Hello! Bienvenido! How are you?\n",
+      "English -> Spanish: ¡Hola! ¡Bienvenido! ¿Cómo estás?\n",
+      "English -> French: Bonjour ! Bienvenue ! Comment ça va ?\n",
+      "English -> Italian: Ciao! Benvenuto! Come stai?\n",
+      "English -> Portuguese: Olá! Bem-vindo! Como você está?\n",
+      "English -> Guaraní: Hola! ¡Aña porã! Mba'éichapa?\n",
+      "==================================================\n",
+      " Text:  We are learning the basics of LangChain\n",
+      "English -> Spanish: Estamos aprendiendo los fundamentos de LangChain.\n",
+      "English -> French: Nous apprenons les bases de LangChain.\n",
+      "English -> Italian: Stiamo imparando le basi di LangChain.\n",
+      "English -> Portuguese: Estamos aprendendo o básico do LangChain.\n",
+      "English -> Guaraní: Ore nderehechávo LangChain arandukápe.\n",
+      "==================================================\n",
+      " Text:  Thank you for stopping by in Internet's corner. I hope you have a great day!\n",
+      "English -> Spanish: ¡Gracias por visitar el rincón de Internet! ¡Espero que tengas un gran día!\n",
+      "English -> French: Merci de vous être arrêté dans le coin d'Internet. J'espère que vous passez une excellente journée !\n",
+      "English -> Italian: Grazie per essere passato nel nostro angolo di Internet. Spero che tu abbia una giornata fantastica!\n",
+      "English -> Portuguese: Obrigado por parar no canto da Internet. Espero que você tenha um ótimo dia!\n",
+      "English -> Guaraní: Agradecemos peẽme ojapo porã hag̃ua Internet retãme. Ahechakuaa peẽme peteï ava porã!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the function with different languages\n",
+    "from_language = \"English\"\n",
+    "to_languages = [\"Spanish\", \"French\", \"Italian\", \"Portuguese\", \"Guaraní\"]\n",
+    "\n",
+    "text = \"Hello! Bienvenido! How are you?\" \n",
+    "print(\" Text: \", text)\n",
+    "for language in to_languages:\n",
+    "    translated_text = translate(from_language, language, text)\n",
+    "    print(f\"{from_language} -> {language}: {translated_text}\")\n",
+    "print(\"=\"*50)\n",
+    "\n",
+    "print(\" Text: \", \"We are learning the basics of LangChain\")\n",
+    "for language in to_languages:\n",
+    "    translated_text = translate(from_language, language, \"\")\n",
+    "    print(f\"{from_language} -> {language}: {translated_text}\")\n",
+    "\n",
+    "print(\"=\"*50)\n",
+    "\n",
+    "text = \"Thank you for stopping by in Internet's corner. I hope you have a great day!\"\n",
+    "print(\" Text: \", text)    \n",
+    "for language in to_languages:\n",
+    "    translated_text = translate(from_language, language, text)\n",
+    "    print(f\"{from_language} -> {language}: {translated_text}\")"
+   ]
   }
  ],
  "metadata": {
