Rename file to reflect step-by-step learning

--- a/fundamentals/01-llm-basic-app.ipynb
+++ b/fundamentals/01-llm-basic-app.ipynb
@@ -2,34 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "885c7cd2",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "118a1c87",
    "metadata": {},
    "source": [
     "# LangChain \n",
     "\n",
-    "LangChain is a framework for developing applications powered by large language models (LLMs)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d21d9f8a",
-   "metadata": {},
-   "source": [
-    "## Installation\n",
-    "\n",
-    "You could directly install the main library `langchain`and start experimenting with it. Or you could install all dependencies from a `requirement.txt` or `environments.yml` file.\n",
-    "\n",
-    "Since I'm new in this AI/ML and GenAI world, I like to install package by package. I usually use `conda` and go from there to build my `environments.yml`. So in this case:  `conda install langchain -c conda-forge` \n",
-    "\n",
-    "You could also run your libraries one by one in your cell like this.\n",
-    "\n",
-    "`%pip install langchain`."
+    "LangChain is a framework for developing applications powered by large language models (LLMs).\n"
    ]
   },
   {
@@ -45,6 +23,24 @@
     "- integration language models: `langchain-openai`, `langchain-aws`, etc. \n",
     "- `langchain`: Chains, agents, and retrieval strategies\n",
     "\n",
+    "### Installation\n",
+    "\n",
+    "You could directly install the main library `langchain`and start experimenting with it. Or you could install all dependencies from a `requirement.txt` or `environments.yml` file.\n",
+    "\n",
+    "Since I'm new in this AI/ML and GenAI world, I like to install package by package. I usually use `conda` and go from there to build my `environments.yml`. So in this case:  `conda install langchain -c conda-forge` \n",
+    "\n",
+    "You could also run your libraries one by one in your cell like this.\n",
+    "\n",
+    "`%pip install langchain`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5a4fad4",
+   "metadata": {},
+   "source": [
+    "# Fundamentals\n",
+    "\n",
     "## LLM Application with ChatModels\n",
     "\n",
     "LangChain supports many different language models that you can use interchangeably. Let's use the revolucionary `OpenAI`\n",
@@ -59,13 +55,11 @@
     "\n",
     "Check [Messages AI References](https://python.langchain.com/api_reference/core/messages.html)\n",
     "\n",
-    "\n",
     "To start a basic Chat, we can use the model directly by passing a list `SystemMessage` and `HummanMessage` messages.\n",
     "\n",
     "Per definition `SystemMessage` is the message for priming AI behavior. How I see it, it's about defining the **persona** and **role** in some cases. In other cases, it's the **task** or instructions.\n",
     "\n",
-    "`HummanMessage` are messages that are passed in from a human to the model. How I see it \"my Want\" or **desire output**.\n",
-    "\n"
+    "`HummanMessage` are messages that are passed in from a human to the model. How I see it \"my Want\" or **desire output**."
    ]
   },
   {
@@ -93,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "8d0e8d38",
    "metadata": {},
    "outputs": [],
@@ -111,17 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "cee8cfb5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='¡Hola! Soy Carmen. Bienvenido a mi viaje de aprendizaje de Langchain.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 18, 'prompt_tokens': 31, 'total_tokens': 49, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_f7d56a8a2c', 'id': 'chatcmpl-BPcHa6jKQu5qGyUPydUPY2zE5AXhD', 'finish_reason': 'stop', 'logprobs': None}, id='run-901718c2-43d5-4472-b44b-c7b58bbd925c-0', usage_metadata={'input_tokens': 31, 'output_tokens': 18, 'total_tokens': 49, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content='¡Hola! Soy Carmen. Bienvenido a mi viaje de aprendizaje de Langchain.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 17, 'prompt_tokens': 31, 'total_tokens': 48, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_34a54ae93c', 'id': 'chatcmpl-BnV0r1eZf6WV4wKFK2jGX0DZ63WeO', 'finish_reason': 'stop', 'logprobs': None}, id='run-f0c81af4-ceb5-497d-92be-9c042db98f18-0', usage_metadata={'input_tokens': 31, 'output_tokens': 17, 'total_tokens': 48, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,29 +136,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "be389b98",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'token_usage': {'completion_tokens': 18,\n",
+       "{'token_usage': {'completion_tokens': 17,\n",
        "  'prompt_tokens': 31,\n",
-       "  'total_tokens': 49,\n",
+       "  'total_tokens': 48,\n",
        "  'completion_tokens_details': {'accepted_prediction_tokens': 0,\n",
        "   'audio_tokens': 0,\n",
        "   'reasoning_tokens': 0,\n",
        "   'rejected_prediction_tokens': 0},\n",
        "  'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}},\n",
        " 'model_name': 'gpt-4o-mini-2024-07-18',\n",
-       " 'system_fingerprint': 'fp_f7d56a8a2c',\n",
-       " 'id': 'chatcmpl-BPcHa6jKQu5qGyUPydUPY2zE5AXhD',\n",
+       " 'system_fingerprint': 'fp_34a54ae93c',\n",
+       " 'id': 'chatcmpl-BnV0r1eZf6WV4wKFK2jGX0DZ63WeO',\n",
        " 'finish_reason': 'stop',\n",
        " 'logprobs': None}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "79bf682f",
    "metadata": {},
    "outputs": [
@@ -183,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|¡|Hola|!| Soy| Carmen|.| Bien|venido| a| mi| viaje| de| aprendizaje| sobre| Lang|chain|.||"
+      "|¡|Hola|!| Soy| Carmen|.| Bien|venido| a| mi| viaje| de| aprendizaje| de| Lang|chain|.||"
      ]
     }
    ],
@@ -208,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "cb98616a",
    "metadata": {},
    "outputs": [
@@ -218,7 +212,7 @@
        "ChatPromptValue(messages=[SystemMessage(content='Translate the following from English into Spanish', additional_kwargs={}, response_metadata={}), HumanMessage(content='We are learning the basics of LangChain', additional_kwargs={}, response_metadata={})])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "6fc8f39f",
    "metadata": {},
    "outputs": [
@@ -251,7 +245,7 @@
        " HumanMessage(content='We are learning the basics of LangChain', additional_kwargs={}, response_metadata={})]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "31d0dcd2",
    "metadata": {},
    "outputs": [
@@ -271,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estamos aprendiendo los conceptos básicos de LangChain.\n"
+      "Estamos aprendiendo los fundamentos de LangChain.\n"
      ]
     }
    ],
@@ -291,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "9f1cd341",
    "metadata": {},
    "outputs": [
@@ -299,7 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estamos aprendiendo los conceptos básicos de LangChain.\n"
+      "Estamos aprendiendo los fundamentos de LangChain.\n"
      ]
     }
    ],
@@ -323,7 +317,13 @@
     "\n",
     "    # Call the model\n",
     "    response = model.invoke(prompt)\n",
-    "    return response.content\n",
+    "\n",
+    "    content = response.content\n",
+    "    if isinstance(content, str):\n",
+    "        return content\n",
+    "    else:\n",
+    "        # If the content is not a string, we can convert it to string\n",
+    "        return str(content)\n",
     "\n",
     "# Test the function\n",
     "print(translate(\"English\", \"Spanish\", \"We are learning the basics of LangChain\"))"
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "9bdffcf8",
    "metadata": {},
    "outputs": [
@@ -341,24 +341,24 @@
      "text": [
       " Text:  Hello! Bienvenido! How are you?\n",
       "English -> Spanish: ¡Hola! ¡Bienvenido! ¿Cómo estás?\n",
-      "English -> French: Bonjour ! Bienvenue ! Comment ça va ?\n",
+      "English -> French: Hello! Bienvenue! Comment ça va?\n",
       "English -> Italian: Ciao! Benvenuto! Come stai?\n",
       "English -> Portuguese: Olá! Bem-vindo! Como você está?\n",
-      "English -> Guaraní: Hola! ¡Aña porã! Mba'éichapa?\n",
+      "English -> Guaraní: Mba'éichapa! Oî porã! Mba'éichapa nde?\n",
       "==================================================\n",
       " Text:  We are learning the basics of LangChain\n",
-      "English -> Spanish: Estamos aprendiendo los fundamentos de LangChain.\n",
+      "English -> Spanish: Estamos aprendiendo los conceptos básicos de LangChain.\n",
       "English -> French: Nous apprenons les bases de LangChain.\n",
       "English -> Italian: Stiamo imparando le basi di LangChain.\n",
       "English -> Portuguese: Estamos aprendendo o básico do LangChain.\n",
-      "English -> Guaraní: Ore nderehechávo LangChain arandukápe.\n",
+      "English -> Guaraní: Ñande roñemoirû LangChain rembiporã.\n",
       "==================================================\n",
       " Text:  Thank you for stopping by in Internet's corner. I hope you have a great day!\n",
       "English -> Spanish: ¡Gracias por visitar el rincón de Internet! ¡Espero que tengas un gran día!\n",
       "English -> French: Merci de vous être arrêté dans le coin d'Internet. J'espère que vous passez une excellente journée !\n",
-      "English -> Italian: Grazie per essere passato nel nostro angolo di Internet. Spero che tu abbia una giornata fantastica!\n",
-      "English -> Portuguese: Obrigado por parar no canto da Internet. Espero que você tenha um ótimo dia!\n",
-      "English -> Guaraní: Agradecemos peẽme ojapo porã hag̃ua Internet retãme. Ahechakuaa peẽme peteï ava porã!\n"
+      "English -> Italian: Grazie per essere passato nell'angolo di Internet. Spero che tu abbia una giornata fantastica!\n",
+      "English -> Portuguese: Obrigado por passar pelo canto da Internet. Espero que você tenha um ótimo dia!\n",
+      "English -> Guaraní: Aguyjeẽ nderehe nde po'í rembiapo renda. Aiko che rembiapópe mbopi porãite!\n"
      ]
     }
    ],
