--- a/fundamentals/01-llm-basic-app.ipynb
+++ b/fundamentals/01-llm-basic-app.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "b1403403",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8d0e8d38",
    "metadata": {},
    "outputs": [],
@@ -105,17 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cee8cfb5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='¡Hola! Soy Carmen. Bienvenido a mi viaje de aprendizaje de Langchain.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 17, 'prompt_tokens': 31, 'total_tokens': 48, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_34a54ae93c', 'id': 'chatcmpl-BnV0r1eZf6WV4wKFK2jGX0DZ63WeO', 'finish_reason': 'stop', 'logprobs': None}, id='run-f0c81af4-ceb5-497d-92be-9c042db98f18-0', usage_metadata={'input_tokens': 31, 'output_tokens': 17, 'total_tokens': 48, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content='¡Hola! Soy Carmen. Bienvenido a mi viaje de aprendizaje de Langchain.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 17, 'prompt_tokens': 31, 'total_tokens': 48, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_34a54ae93c', 'id': 'chatcmpl-BqUwlBBO2TkhyFePg3BA2YmrS9tHc', 'finish_reason': 'stop', 'logprobs': None}, id='run-fa406345-f0a6-4be2-828c-62f341fd9e53-0', usage_metadata={'input_tokens': 31, 'output_tokens': 17, 'total_tokens': 48, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "be389b98",
    "metadata": {},
    "outputs": [
@@ -153,12 +153,12 @@
        "  'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}},\n",
        " 'model_name': 'gpt-4o-mini-2024-07-18',\n",
        " 'system_fingerprint': 'fp_34a54ae93c',\n",
-       " 'id': 'chatcmpl-BnV0r1eZf6WV4wKFK2jGX0DZ63WeO',\n",
+       " 'id': 'chatcmpl-BqUwlBBO2TkhyFePg3BA2YmrS9tHc',\n",
        " 'finish_reason': 'stop',\n",
        " 'logprobs': None}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "79bf682f",
    "metadata": {},
    "outputs": [
@@ -188,6 +188,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "392a4cf5",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## LangChain's Components\n",
+    "### LangChain: Prompts\n",
+    "\n",
+    "Prompt templates allow reausable prompts. It's similar to the templates I'm used to use in web development: a string with formatted variables that we can replace. The formatted variable   \n",
+    "\"Tell me more about {country}\" \n",
+    "\n",
+    "\n",
+    "`from langchain.prompts import PromptTemplate`\n",
+    "\n",
+    "## LangChain: Tools\n",
+    "\n",
+    "Per LangChain's doc: ***\"The tool abstraction in LangChain associates a Python function with a schema that defines the function's name, description and expected arguments.\"***\n",
+    "\n",
+    "The recommended way to create tools is using the `@tool` decorator. \n",
+    "\n",
+    "````\n",
+    "from langchain_core.tools import tool\n",
+    "\n",
+    "@tool\n",
+    "def exponentiate(x: float, y: float) -> float:\n",
+    "    \"\"\"Raise 'x' to the 'y'.\"\"\"\n",
+    "    return x**y\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4436efcb",
    "metadata": {},
    "source": [
@@ -202,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cb98616a",
    "metadata": {},
    "outputs": [
@@ -212,7 +243,7 @@
        "ChatPromptValue(messages=[SystemMessage(content='Translate the following from English into Spanish', additional_kwargs={}, response_metadata={}), HumanMessage(content='We are learning the basics of LangChain', additional_kwargs={}, response_metadata={})])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "6fc8f39f",
    "metadata": {},
    "outputs": [
@@ -245,7 +276,7 @@
        " HumanMessage(content='We are learning the basics of LangChain', additional_kwargs={}, response_metadata={})]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "31d0dcd2",
    "metadata": {},
    "outputs": [
@@ -265,7 +296,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estamos aprendiendo los fundamentos de LangChain.\n"
+      "Estamos aprendiendo los conceptos básicos de LangChain.\n"
      ]
     }
    ],
@@ -285,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "9f1cd341",
    "metadata": {},
    "outputs": [
@@ -331,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "9bdffcf8",
    "metadata": {},
    "outputs": [
@@ -341,24 +372,24 @@
      "text": [
       " Text:  Hello! Bienvenido! How are you?\n",
       "English -> Spanish: ¡Hola! ¡Bienvenido! ¿Cómo estás?\n",
-      "English -> French: Hello! Bienvenue! Comment ça va?\n",
+      "English -> French: Bonjour ! Bienvenue ! Comment ça va ?\n",
       "English -> Italian: Ciao! Benvenuto! Come stai?\n",
       "English -> Portuguese: Olá! Bem-vindo! Como você está?\n",
-      "English -> Guaraní: Mba'éichapa! Oî porã! Mba'éichapa nde?\n",
+      "English -> Guaraní: Aña! Oikóva! Mba'éichapa reiko?\n",
       "==================================================\n",
       " Text:  We are learning the basics of LangChain\n",
       "English -> Spanish: Estamos aprendiendo los conceptos básicos de LangChain.\n",
       "English -> French: Nous apprenons les bases de LangChain.\n",
       "English -> Italian: Stiamo imparando le basi di LangChain.\n",
       "English -> Portuguese: Estamos aprendendo o básico do LangChain.\n",
-      "English -> Guaraní: Ñande roñemoirû LangChain rembiporã.\n",
+      "English -> Guaraní: Oiko ko’ẽrõ LangChain mba’éichapa.\n",
       "==================================================\n",
       " Text:  Thank you for stopping by in Internet's corner. I hope you have a great day!\n",
-      "English -> Spanish: ¡Gracias por visitar el rincón de Internet! ¡Espero que tengas un gran día!\n",
+      "English -> Spanish: Gracias por visitar el rincón de Internet. ¡Espero que tengas un gran día!\n",
       "English -> French: Merci de vous être arrêté dans le coin d'Internet. J'espère que vous passez une excellente journée !\n",
-      "English -> Italian: Grazie per essere passato nell'angolo di Internet. Spero che tu abbia una giornata fantastica!\n",
+      "English -> Italian: Grazie per essere passato nell'angolo di Internet. Spero che tu abbia una fantastica giornata!\n",
       "English -> Portuguese: Obrigado por passar pelo canto da Internet. Espero que você tenha um ótimo dia!\n",
-      "English -> Guaraní: Aguyjeẽ nderehe nde po'í rembiapo renda. Aiko che rembiapópe mbopi porãite!\n"
+      "English -> Guaraní: Régua porãite reho'a pe Internet rembiapo. Aikotevẽ ndéve añete hína pyahu porã!\n"
      ]
     }
    ],
